2020-05-13 - v1.1 - tehnick
    * Fix automatic import of PGP key from the message body
    * Remove plugin button from chat toolbar: OpenPGP button from Psi core now
      have special menu items for sending of public keys

2020-05-12 - v1.0 - tehnick
    * Change short name of plugin from "gnupg" to "openpgp"
    * Change full name of plugin from "GnuPG Key Manager Plugin" to
      "OpenPGP Plugin"
    * Add all available OpenPGP related options to plugin options dialog
    * Preparation of plugin to moving OpenPGP related code from Psi core
    * Code refactoring

2020-04-29 - v0.4.0 - tehnick
    * Improve status messages

2015-10-26 - v0.3.9 - taurus
    * Фикс удаления ключей
    * Фикс переводов названий столбцов

2014-10-31 - v0.3.8 - taurus
    * Фикс магических чисел в модели

2014-10-31 - v0.3.7 - taurus
    * Фикс кнопки отправки ключа

2014-10-29 - v0.3.6 - taurus
    * Обе настройки по умолчанию включены
    + Добавлена колонка Expiration

2013-09-27 - v0.3.5 - taurus
    * Уменьшена иконка плагина
    - Убрана опция отображать на панели чата

2013-08-13 - v0.3.4 - taurus
    + Иконка плагина

2013-05-14 - v0.3.3 - taurus
    * Улучшен алгоритм поиска gpg бинарника
    * Иконка критической ошибки в информации в случае ошибки

2013-05-14 - v0.3.2 - taurus
    * Косметика в диалоге создания ключевой пары

2013-05-13 - v0.3.1 - taurus
    * Добавлен диалог подтверждения удаления ключей

2013-04-04 - v0.3.0 - taurus
    * Добавлена функция автоимпорта ключа из тела сообщения
    * В панель инструментов чата добавлена кнопка отправки публичного ключа
    * В диалоге генерации ключевой пары по умолчанию срок действия ключа 1 год

2013-02-27 - v0.2.1 - taurus
    * Добавлена информация о плагине
    * Исправлен алгоритм поиска gpg
    * Кнопка "Инфо" выводит сообщение о невозможности запустить gpg
    * Плагин переименован в GnuPG Key Manager (thx nsof)

2013-01-26 - v0.2.0 - taurus
    * Импорт/экспорт из/в буфер обмена